# memo

./: .gitignore  .pre-commit-config.yaml  LICENCE  README.md  mkdocs.yml  pyproject.toml  temp.md  todo.txt
docs/: api_docs.md
memo/: .settings  20230901153821.bookmark.md  Readability.js  __init__.py  main.py  manage_memobooks_dialog.py  memo.py  memo_item.py  memo_window.py  memobook.py  utils.py
memo/templates/: __init__.py  memo.html
memobook/: .settings  Readability1.js  app.py  bookmark_dialog.py  editor_window.py  main.py  memo.py  memobook.py  utils.py
memobook/ObjectListView2/: ObjectListView.py
memobook/templates/: memo.html
tests/: __init__.py
